| Summary: | ASTERISK-25117: res_mwi_external_ami: Fix manager action registrations. | ||
| Reporter: | Corey Farrell (coreyfarrell) | Labels: | |
| Date Opened: | 2015-05-21 18:17:58 | Date Closed: | 2015-05-22 05:18:06 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_mwi_external_ami |
| Versions: | SVN 13.3.2 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | This module uses ast_manager_register_xml_core, when it should use ast_manager_register_xml. | ||
| Comments: | |||